@@ -1,3 +1,7 @@
+2008-07-31  Alberto Garcia  <agarcia@igalia.com>
+
+	* examples/hildon-button-example.c: Updated example.
+
 2008-07-30  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* doc/hildon-docs.sgml:
